grinding through some changes, mostly figuring out RTTY

--- a/hamster-handbook.adoc
+++ b/hamster-handbook.adoc
@@ -1,9 +1,11 @@
 = The Hamster Handbook
 Tim Born <Timothy.D.Born@gmail.com>
-v0.3, July 21, 2021
+v0.4, July 22, 2021
 :toclevels 5:
 :icons: font
-:toc:
+:toc2:
+:imagesdir: ./
+
 image::images/hamster-with-headphones.png[]
 
 
@@ -54,6 +56,16 @@ https://aprs.fi
 
 ???
 
+== RTTY
+
+**R**adio **T**ele**TY**pe - pretty vintage stuff, but still being used, apparently.
+
+Tutorial for beginners and MMTTY software (MSWin only, alas) available at https://hamsoft.ca/pages/mmtty.php
+
+. AFSK - ?
+
+"LSB is the convention for AFSK"
+
 = Antennas
 
 If you want to analyze an antenna design, AFAIK the only free software left for this is https://www.qsl.net/4nec2/
@@ -62,6 +74,32 @@ It has a very steep learning curve, but it could be useful.
 
 MMANA-GAL appears to be free antenna analysis software.
 MSWin only, sadly.
+
+= Coolest Website Ever
+
+Imagine being able to operate a ham radio (receive only) from your browser.
+Practice dialing in signals and understanding the bands.
+Thanks to Software Defined Radio [SDR] and some generous people, you can!
+
+image::images/NA5B-SDR.png[]
+
+There is a list of other operating locations here:
+http://websdr.org/
+
+SDR is pretty magical, in that dozens of people can operate simultaneously.
+
+= Projects
+
+== Project #1 - APRS on the Cheap
+
+Minimal materials to get experience with APRS.
+Proposed solution: APRSdriod running on cell phone, connected to a dual band Handy Talkie (HT).
+
+SITE for APRSdroid and where you can download it free
+
+Phyical wiring and cable construction
+
+operating APRSdroid - what can you do with it?
 
 = Reference Materials
 
@@ -129,6 +167,10 @@ Q-signals are a system of radio shorthand as old as wireless and developed from 
 |===
 
 REF: ARRL
+
+== Band Chart
+
+image::images/Band Chart.pdf[]
 
 = References
 
