--- a/hamster-handbook.adoc
+++ b/hamster-handbook.adoc
@@ -13,34 +13,34 @@ image::images/hamster-with-headphones.png[]
 
 Notes made by a ham newbie as he muddled his way through the learning curve.
 
-= Scenarios
+== Scenarios
 
 . just chatting ("rag chew")
 . automatic position reporting (see APRS)
-. operating remotely - QRM, solar powered
+. operating remotely - QRM, solar-powered
 . operating remotely - canyons and other obstacles
 . disaster assistance - reconnecting to a net, operating in a net, operating the net
 
-= Morse Code
+== Morse Code
 
 For completeness, Morse code (CW) is included.
 It requires you to learn Morse, however.
-From many perspectives, CW is optimal - low bandwidth, low power, it can get through whenm voice cannot, and the kit to start operating is probably the least expensive -- assuming you can get past the 'learn Morse' part.
+From many perspectives, CW is optimal - low bandwidth, low power, it can get through when voice cannot, and the kit to start operating is probably the least expensive -- assuming you can get past the 'learn Morse' part.
 
 Morse code used to be called Continuous Wave (CW).
 
-= Voice
+== Voice
 
-AM, FM, side band
+AM, FM, sideband
 
-= Digital Modes
+== Digital Modes
 
 It appears that digital is where a lot of the experimentation is happening.
 While CW & voice are well understood and pretty stable, digital provides a ton of opportunities to play with protocols, error checking & correction, TDMA, data+voice and a ton of other things.
 
 I'm attracted to digital modes because it appears it may be possible to get a message through with a low power transmitter when voice wouldn't cut it.
 
-== Digital Voice
+=== Digital Voice
 
 Who would have thought there would be competition in digital voice?
 I see DMR on the European models, and that appears to be TDMA (duplexing two channels in one 12.5 kHz band).
@@ -65,13 +65,28 @@ Oldest digital format.
 
 Internet is the weak link, and many of these look to be proprietary.
 
-== ALE - Automatic Link Establishment
+=== Packet
+
+How does "packet" relate to APRS or WinLink?
+Or is "packet" some separate thingy?
+
+[quote, wikipedia]
+____
+"Since the late 1990s, most AX.25 usage has shifted to a different one-to-many communication paradigm with the Automatic Packet Reporting System (APRS)".
+____
+
+
+Check out YouTube for Denver Radio Club "DRC Packet Radio Class 01".
+Circa 1992 but it has the details and the history.
+Excellent.
+
+=== ALE - Automatic Link Establishment
 
 Problem: after a disaster how to hams reconnect with each other?
 
 Solution: ALE is a set of fixed frequencies and a protocol for scanning those frequencies to find and reconnect hams to each other.
 
-== APRS - Automatic Packet Reporting System
+=== APRS - Automatic Packet Reporting System
 
 Don't make the mistake of calling it 'Automatic Position Reporting System' or Bob will get annoyed.
 
@@ -81,11 +96,11 @@ https://aprs.fi
 
 https://smsgte.org/[SMSGTE] is a way to bridge APRS messaging and SMS (cell phone texting).
 
-== JS8CALL
+=== JS8CALL
 
 ???
 
-== RTTY
+=== RTTY
 
 **R**adio **T**ele**TY**pe - pretty vintage stuff, but still being used, apparently.
 
@@ -95,7 +110,7 @@ Tutorial for beginners and MMTTY software (MSWin only, alas) available at https:
 
 "LSB is the convention for AFSK"
 
-== WinLink
+=== WinLink
 
 WinLink - global radio email - https://www.winlink.org/
 
@@ -130,9 +145,9 @@ ____
 
 https://www.arednmesh.org/content/kenwood-tm-d710g-and-winlink
 
-= Antennas
+== Antennas
 
-== Antenna Design
+=== Antenna Design
 If you want to analyze an antenna design, AFAIK the only free software left for this is https://www.qsl.net/4nec2/
 It has a very steep learning curve, but it could be useful.
 (extra credit: is the fractal antenna in White Collar really an antenna?  What properties do you get from the fractal shape?)
@@ -140,14 +155,14 @@ It has a very steep learning curve, but it could be useful.
 MMANA-GAL appears to be free antenna analysis software.
 MSWin only, sadly.
 
-== Mobile Antennas
+=== Mobile Antennas
 
 If you can stomach it, the NMO mount looks the best, as it's a permanent mount on your roof.
 Originally bought Browning BR-1015-UHF from Amazon ($24) but what I received has the chrome plating flaking off and the fit & finish are poor.
 
 Considering swapping for Larsen NMOK mount, which is _reputed_ to be of better quality.
 
-= Coolest Website Ever
+== Coolest Website Ever
 
 Imagine being able to operate a ham radio (receive only) from your browser.
 Practice dialing in signals and understanding the bands.
@@ -160,20 +175,20 @@ http://websdr.org/
 
 SDR is pretty magical, in that dozens of people can operate simultaneously.
 
-= Projects
+== Projects
 
-== Project #1 - APRS on the Cheap
+=== Project #1 - APRS on the Cheap
 
 Minimal materials to get experience with APRS.
-Proposed solution: APRSdriod running on cell phone, connected to a dual band Handy Talkie (HT).
+Proposed solution: APRSdriod running on cell phone, connected to a dual-band Handy Talkie (HT).
 
 SITE for APRSdroid and where you can download it free
 
-Phyical wiring and cable construction
+Physical wiring and cable construction
 
 operating APRSdroid - what can you do with it?
 
-== Project #2 - WinLink on Android
+=== Project #2 - WinLink on Android
 
 See the section on WinLink and replicate it by sending email over winlink on Tera HT (using the cable from project #1 above).
 
@@ -184,26 +199,26 @@ See the section on WinLink and replicate it by sending email over winlink on Ter
 How does the choice of SSID affect this?
 What would a sane policy for using SSID with WinLink be?
 
-== Project #3 - Listen to the International Space Station
+=== Project #3 - Listen to the International Space Station
 
 Even with a handheld, if you know the frequency and when to expect them, you can always listen in.
 
 https://spotthestation.nasa.gov/sightings/view.cfm?country=United_States&region=Arizona&city=Phoenix#.YQBMBRNKg-Q
 
-== Project #4 - See How Far You Can Whisper
+=== Project #4 - See How Far You Can Whisper
 
 Using something like WSTJ-X and the WSPR protocol, you can experiment to see how far you can actually go on a few watts (or less!).
 Multi-platform, multiband, cool mapping tool to see your results.
 
 https://physics.princeton.edu/pulsar/k1jt/wspr.html[WSPR]
 
-== Project #5 - Send A Text Message From Your Radio
+=== Project #5 - Send A Text Message From Your Radio
 
 Try using https://smsgte.org/[SMSGTE] to connect (bi-directionally!) your APRS-enabled radio with SMS.
 
-= Reference Materials
+== Reference Materials
 
-== Phonetic Alphabet
+=== Phonetic Alphabet
 
 |===
 |A |Alfa/Alpha |AL FAH
@@ -234,7 +249,7 @@ Try using https://smsgte.org/[SMSGTE] to connect (bi-directionally!) your APRS-e
 |Z |Zulu |ZOO LOO
 |===
 
-== Q-Codes
+=== Q-Codes
 
 Q-signals are a system of radio shorthand as old as wireless and developed from even older telegraphy codes. Q-signals are a set of abbreviations for common information that save time and allow communication between operators who don’t speak a common language. Modern ham radio uses them extensively. The table below lists the most common Q-signals used by hams. While Q-signals were developed for use by Morse operators, their use is common on phone, as well. You will often hear, “QRZed?” as someone asks “Who is calling me?” or “I’m getting a little QRM” from an operator receiving some interference or “Let’s QSY to 146.55” as two operators change from a repeater frequency to a nearby simplex communications frequency.
 
@@ -268,11 +283,11 @@ Q-signals are a system of radio shorthand as old as wireless and developed from 
 
 REF: ARRL
 
-== Band Chart
+=== Band Chart
 
 image::images/Band Chart.pdf[]
 
-== International Call Sign Directory
+=== International Call Sign Directory
 
 |===
 |Call Sign Series |Allocated To
@@ -590,7 +605,7 @@ image::images/Band Chart.pdf[]
 
 http://www.arrl.org/international-call-sign-series
 
-= References
+== References
 
 . ARRL - American Radio Relay League.  arrl.org
 . 4NEC2 - "NEC based antenna modeler and optimizer
